fdo#51165 svg: add vertex to polygon if close command (z/Z) is detected

Change-Id: I01219c863229f11812480d311ddfcb0a90c2bb29